--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -196,7 +196,38 @@ nav a {
 }
 
 .resume-column-title {
-    color:  #474747;
+    color: #474747;
     font-size: 30px;
     font-weight: 700;
+     margin-bottom: 10px;
+}
+
+.resume-container{
+    display: flex;
+    gap:50px;
+}
+
+.resume-container hr{
+    margin: 30px;
+}
+
+.resume-item-institute {
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 0px;
+    margin-bottom: 20px;
+}
+
+.resume-item-despt {
+    color:  #757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    /* 175% */
+}
+
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
 }
