--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -231,3 +231,10 @@ nav a {
     text-align: center;
     margin-top: 50px;
 }
+
+footer{
+    display: flex;
+    background: #FFF8F3;
+    margin-top: 100px;
+    padding: 130px 200px;
+}
